// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

package mz_mysql_util;

import "repr/src/relation_and_scalar.proto";

message ProtoMySqlTableDesc {
    string name = 1;
    string schema_name = 2;
    repeated ProtoMySqlColumnDesc columns = 3;
}

message ProtoMySqlColumnDesc {
    string name = 1;
    mz_repr.relation_and_scalar.ProtoColumnType column_type = 2;
    optional ProtoMySqlColumnKey column_key = 3;
}

enum ProtoMySqlColumnKey {
    PRI = 0;
    UNI = 1;
    MUL = 2;
}
